# docker_tests

./: .gitignore  Dockerfile  LICENSE  LICENSE.txt  README.md  app.py  exemplo.csv  pyproject.toml  readme_exemplo.md
